# ChangeLog for media-gfx/eog
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/eog/ChangeLog,v 1.281 2011/03/22 19:35:21 ranger Exp $

  22 Mar 2011; Brent Baude <ranger@gentoo.org> eog-2.32.1.ebuild:
  Marking eog-2.32.1 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> eog-2.32.1.ebuild:
  ppc64 stable wrt #353436

  20 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> eog-2.30.2.ebuild:
  Fix slot-deps on gtk+ and other libs

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org> eog-2.32.1.ebuild:
  alpha/arm/ia64/sparc stable wrt #353436

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> eog-2.32.1.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> eog-2.32.1.ebuild:
  Stable on amd64 wrt bug #353436

  14 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> eog-2.30.2.ebuild,
  eog-2.32.1.ebuild:
  Fix dependencies on gdk-pixbuf/gtk, bug #354279.

*eog-2.32.1 (28 Nov 2010)

  28 Nov 2010; Pacho Ramos <pacho@gentoo.org> -eog-2.32.0.ebuild,
  +eog-2.32.1.ebuild:
  Version bump, remove old.

  08 Nov 2010; Gilles Dartiguelongue <eva@gentoo.org> -eog-2.26.3.ebuild,
  -eog-2.28.2.ebuild, eog-2.30.2.ebuild, eog-2.32.0.ebuild:
  Allow use of alternate jpeg implementation. Re-drop hppa keyword, clean up
  old revisions.

  02 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org> eog-2.32.0.ebuild:
  Fix gnome-desktop slot (2)

*eog-2.32.0 (17 Oct 2010)

  17 Oct 2010; Pacho Ramos <pacho@gentoo.org> +eog-2.32.0.ebuild:
  Version bump for Gnome 2.32: bugfixes and translation updates.

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org> eog-2.30.2.ebuild:
  alpha/ia64/sparc stable wrt #324077

  14 Oct 2010; Markus Meier <maekke@gentoo.org> eog-2.30.2.ebuild:
  arm stable, bug #324077

  09 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> eog-2.30.2.ebuild:
  ppc64 stable wrt #324077

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org> eog-2.30.2.ebuild: